feat: Add Vercel + Railway deployment configuration
- Add vercel.json for frontend deployment on Vercel
- Add railway.json and Procfile for backend deployment on Railway
- Update API client to use VITE_API_URL environment variable
- Update WebSocket hook to use VITE_WS_URL environment variable
- Update backend CORS to accept ALLOWED_ORIGINS from environment
- Add .env.example files for both frontend and backend
- Update README with deployment instructions
- Update .gitignore for environment files

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@ Thumbs.db
 node_modules/
 .next/
 out/
+# Environment files (keep .example files)
+.env
+.env.local
+.env.production
+.env.*.local
+!.env.example
+!.env.development
+!.env.production.example
+!frontend/.env.example
+!frontend/.env.development
+!frontend/.env.production.example
+
+# Vercel
+.vercel
