--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,14 +1,9 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "vite",
+  "installCommand": "npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "https://your-railway-app.railway.app/api/:path*"
-    }
-  ],
   "headers": [
     {
       "source": "/(.*)",
