--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,10 @@ asyncpg>=0.29.0
 alembic>=1.13.0
 psycopg2-binary>=2.9.0
 
+# Testing
+pytest>=7.0.0
+httpx>=0.25.0
+
 # Note: These are the only required libraries as specified.
 # The application uses:
 # - networkx for graph operations and network analysis
